Update dashboard UX: Show home page for logged-out users and fix chart cards display issue. Clean up codebase by removing node_modules, package-lock.json, and temporary Supabase files.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "technical",
     "AI"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Actioneer, Inc.",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {}
 }
