--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "generate-config": "node scripts/generate-config.js",
-    "build": "CI=false REACT_APP_SUPABASE_URL=$REACT_APP_SUPABASE_URL REACT_APP_SUPABASE_ANON_KEY=$REACT_APP_SUPABASE_ANON_KEY npm run generate-config && react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
