--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "./scripts/build-with-env.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
