--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build",
+        "distDir": "frontend/build",
         "buildCommand": "cd frontend && npm ci && REACT_APP_SUPABASE_URL=$REACT_APP_SUPABASE_URL REACT_APP_SUPABASE_ANON_KEY=$REACT_APP_SUPABASE_ANON_KEY npm run build"
       }
     }
@@ -20,7 +20,7 @@
     },
     {
       "src": "^[^/.]+$",
-      "dest": "/frontend/index.html"
+      "dest": "/frontend/build/index.html"
     }
   ]
 }
