--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build",
+        "outputDirectory": "build",
         "buildCommand": "cd frontend && npm ci && REACT_APP_SUPABASE_URL=$REACT_APP_SUPABASE_URL REACT_APP_SUPABASE_ANON_KEY=$REACT_APP_SUPABASE_ANON_KEY npm run build"
       }
     }
@@ -16,7 +16,28 @@
       "dest": "/api/$1"
     },
     {
-      "handle": "filesystem"
+      "src": "/test.html",
+      "dest": "/test.html"
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/runtime-config.js",
+      "dest": "/runtime-config.js"
+    },
+    {
+      "src": "/env-config.js",
+      "dest": "/env-config.js"
+    },
+    {
+      "src": "/debug-values.js",
+      "dest": "/debug-values.js"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|gif|svg|ico))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
