--- a/vercel.json
+++ b/vercel.json
@@ -5,43 +5,13 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "outputDirectory": "build",
-        "buildCommand": "cd frontend && npm ci && REACT_APP_SUPABASE_URL=$REACT_APP_SUPABASE_URL REACT_APP_SUPABASE_ANON_KEY=$REACT_APP_SUPABASE_ANON_KEY npm run build"
+        "distDir": "frontend/build",
+        "buildCommand": "cd frontend && npm install && npm run build"
       }
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/test.html",
-      "dest": "/test.html"
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/runtime-config.js",
-      "dest": "/runtime-config.js"
-    },
-    {
-      "src": "/env-config.js",
-      "dest": "/env-config.js"
-    },
-    {
-      "src": "/debug-values.js",
-      "dest": "/debug-values.js"
-    },
-    {
-      "src": "/(.*\\.(js|css|png|jpg|gif|svg|ico))",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/frontend/build/index.html" }
   ]
 }
