Clean up codebase by removing test components and simplifying Supabase connection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:env": "./scripts/build-with-env.sh",
+    "build": "./scripts/build-with-env.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
