--- a/vercel.json
+++ b/vercel.json
@@ -2,42 +2,5 @@
   "version": 2,
   "buildCommand": "cd frontend && npm install && CI=false npm run build",
   "outputDirectory": "frontend/build",
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/manifest.json"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "/logo192.png",
-      "dest": "/logo192.png"
-    },
-    {
-      "src": "/logo512.png",
-      "dest": "/logo512.png"
-    },
-    {
-      "src": "/runtime-config.js",
-      "dest": "/runtime-config.js"
-    },
-    {
-      "src": "/env-config.js",
-      "dest": "/env-config.js"
-    },
-    {
-      "src": "/test.html",
-      "dest": "/test.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "framework": "create-react-app"
 }
